<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <ImageView
        android:id="@+id/imageFundo"
        android:layout_width="411dp"
        android:layout_height="735dp"
        android:alpha="0.7"
        android:contentDescription="@string/fundo_com_muitos_dados"
        android:scaleType="centerCrop"
        android:src="@drawable/fundo_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageDiceCartoon"
        android:layout_width="218dp"
        android:layout_height="174dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/imagem_de_um_dado_de_tenis_com_um_machado_e_fumando_charuto"
        android:src="@drawable/dicecartoon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttond8"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="70dp"
        android:text="@string/d8"
        android:textSize="20sp"
        app:cornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/buttond6"
        app:layout_constraintTop_toBottomOf="@+id/imageDiceCartoon" />

    <Button
        android:id="@+id/buttond6"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="120dp"
        android:text="@string/d6"
        android:textSize="20sp"
        app:cornerRadius="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDiceCartoon" />

    <Button
        android:id="@+id/buttond12"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/d12"
        android:textSize="20sp"
        app:cornerRadius="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttond6" />

    <Button
        android:id="@+id/buttond20"
        android:layout_width="100dp"
        android:layout_height="66dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/d20"
        android:textSize="20sp"
        app:cornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/buttond12"
        app:layout_constraintTop_toBottomOf="@+id/buttond8" />
</androidx.constraintlayout.widget.ConstraintLayout>